Review comments fix for table Config